# scramble-gen

./: Cargo.toml  README.md
src/: cube.rs  lib.rs  main.rs  moves.rs  scramble.rs
src/generators/: five.rs  four.rs  mod.rs  seven.rs  six.rs  three.rs  validator.rs
tests/: redundancy_tests.rs  scramble_tests.rs
